# Apex_RP_Analysis

./: .env.example  .gitignore  Cargo.toml  README.md  angular.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
api/: get-rp.js  get-rp.rs  get-rp.ts
docs/: test-evidence.md
docs/evidence/: README.md  api-smoke-test.js  api-smoke-test.txt  node-check.txt  npm-build.txt
src/: index.html  styles.css
src/app/: app.component.html  app.component.ts
src/app/components/design-doc/: design-doc-section.interface.ts  design-doc.component.html  design-doc.component.ts
src/app/core/: rp-data.service.ts  rp.model.ts  rp.utils.ts
