[package]
name = "apex-rp-analysis-api"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vercel_runtime = "1.1"

[[bin]]
name = "get-rp"
path = "api/get-rp.rs"
